# MiniCode

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.claude/: CLAUDE.md
doc/: minicode-design.md  minicode-task-plan.md  minicode-task-plan_1.0.md  minicode-task-plan_2.0.md  problem.md  shell-compatibility.md  tool-concurrency-optimization.md
src/minicode/: __init__.py  main.py
tests/: conftest.py  test_smoke.py
tests/test_agent/: test_compaction.py  test_context.py  test_loop.py  test_loop_concurrency.py  test_planner.py  test_subagents.py  test_system_prompt.py
tests/test_cli/: __init__.py  test_app.py  test_completer.py  test_confirm.py  test_renderer.py  test_theme.py
tests/test_commands/: __init__.py  conftest.py  test_clear.py  test_compact.py  test_config.py  test_context.py  test_help.py  test_integration.py  test_memory_cmd.py  test_quit.py  test_registry.py  test_session.py
tests/test_config/: __init__.py  test_context_compaction_config.py  test_loader.py  test_memory_config.py  test_planning_config.py
tests/test_memory/: __init__.py  test_get_all_content.py  test_integration.py  test_manager.py  test_models.py
tests/test_permissions/: __init__.py  test_checker.py  test_store.py
tests/test_prompts/: __init__.py  test_compaction.py  test_composition.py  test_main_agent.py  test_planning.py  test_public_api.py  test_subagent.py
tests/test_providers/: __init__.py  test_message_contract.py  test_message_serde.py  test_openai_compatible.py  test_registry.py
tests/test_session/: test_integration.py  test_manager.py  test_models.py
(+104 files in other folders)
