[project]
name = "minicode"
version = "0.1.0"
description = "A simplified Claude Code-style Python CLI for AI-assisted programming."
readme = "README.md"
authors = [
    { name = "MiniCode contributors" },
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "openai>=2.44.0",
    "prompt-toolkit>=3.0.52",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "structlog>=26.1.0",
    "typer>=0.26.8",
]

[project.scripts]
minicode = "minicode.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.20",
    "types-pyyaml>=6.0.12.20260518",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
packages = ["minicode"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
